<resources>
    <string name="app_name">login</string>
    <string name="email_address">Email address</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="failed_to_login">Failed to login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
</resources>